[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "hb-market-data"
dynamic = ["version"]
description = "Live market data adapter for Hummingbot — implements MarketDataProtocol from hb-strategy-framework"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hb-strategy-framework>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
]

[tool.hatch.version]
path = "market_data/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["market_data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
timeout = 30
addopts = "--strict-markers --strict-config -v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source_pkgs = ["market_data"]
omit = ["market_data/__about__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = ["no cov", "if __name__", "if TYPE_CHECKING", "raise NotImplementedError", "@overload"]

[tool.hummingbot.supersedes]
module = "hummingbot.data_feed"
import_path = "market_data"
test_paths = []
