[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "hb-market-data"
dynamic = ["version"]
description = "Live market data adapter for Hummingbot — implements MarketDataProtocol from hb-strategy-framework"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hb-strategy-framework>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
]

[tool.hatch.version]
path = "market_data/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["market_data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
timeout = 30
addopts = "--strict-markers --strict-config -v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source_pkgs = ["market_data"]
omit = ["market_data/__about__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = ["no cov", "if __name__", "if TYPE_CHECKING", "raise NotImplementedError", "@overload"]

[tool.hummingbot.supersedes]
module = "hummingbot.data_feed"
import_path = "market_data"
test_paths = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pydantic = ">=2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=7.1.0"
pytest-timeout = ">=2.2.0"
ruff = ">=0.15.10"
mypy = ">=1.5.1"
pre-commit = ">=2.15.0"

[tool.pixi.feature.ci.dependencies]
ruff = ">=0.15.10"
mypy = ">=1.5.1"
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
pytest-timeout = ">=2.2.0"
bandit = ">=1.8.0"
pre-commit = ">=2.15.0"
hatchling = ">=1.18"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
ci = { features = ["ci", "dev"], solve-group = "default" }
quality-ci = { features = ["ci", "dev"], solve-group = "default" }
py310 = { features = ["py310", "dev"], solve-group = "py310" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }

[tool.pixi.tasks]
test = "pytest tests/"
test-unit = "pytest tests/unit/"
test-integration = "pytest tests/integration/"
lint = "ruff check market_data tests"
format = "ruff format market_data tests"
format-check = "ruff format --check market_data tests"
typecheck = "mypy market_data"
build = "hatchling build"
quality = { depends-on = ["lint", "format-check"] }
check = { depends-on = ["quality", "typecheck", "test"] }
